--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/platform-browser": "~10.0.6",
         "@angular/platform-browser-dynamic": "~10.0.6",
         "@angular/router": "~10.0.6",
+        "@nicky-lenaers/ngx-scroll-to": "^9.0.0",
         "bootstrap": "^4.5.0",
         "font-awesome": "^4.7.0",
         "ngx-bootstrap": "^5.6.1",
